--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ header {
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
-  bottom: -110px;
+  bottom: 35.5%;
   left: 50%;
   margin-left: -60px;
 }
